# RBE4540FinalProjectGroup1

./: README.md
project_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
project_ws/install/josh_code/lib/Josh_Code/: grasp_function_josh_node  grasp_matrix_node
project_ws/install/josh_code/share/Josh_Code/: package.xml
project_ws/install/josh_code/share/josh_code/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
project_ws/install/pcl/lib/pcl/: transform_pointcloud
project_ws/install/pcl/share/pcl/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
project_ws/install/pcl/share/pcl/cmake/: pclConfig-version.cmake  pclConfig.cmake
project_ws/install/pcl/share/pcl/environment/: ament_prefix_path.dsv  path.dsv  pythonpath.dsv  pythonpath.sh
project_ws/install/vbm_project_env/share/vbm_project_env/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
project_ws/install/vbm_project_env/share/vbm_project_env/cmake/: vbm_project_envConfig-version.cmake  vbm_project_envConfig.cmake
project_ws/install/vbm_project_env/share/vbm_project_env/environment/: ament_prefix_path.dsv  path.dsv
project_ws/log/: latest_build
project_ws/src/: Grasp_function_Josh.py
project_ws/src/josh_code/: setup.cfg  setup.py
project_ws/src/josh_code/josh_code/: Grasp_function_Individual_Josh.py
project_ws/src/pcl/: package.xml
project_ws/src/vbm_project_env/: package.xml
project_ws/src/vbm_project_env/src/: Test1.py
(+12 files in other folders)
